# sseplus

./: CMakeLists.txt
SSEPlus/: SSEPlus.h  SSEPlus_CPUID.h  SSEPlus_platform.h
SSEPlus/emulation/: SSEPlus_emulation_REF.h  SSEPlus_emulation_comps_REF.h  SSEPlus_emulation_comps_SSE2.h
SSEPlus/include/: SSEPlus.h  SSEPlus_CPUID.h  SSEPlus_platform.h
SSEPlus/include/native/: SSEPlus_native_SSE.h  SSEPlus_native_SSE2.h  SSEPlus_native_SSE4a.h  SSEPlus_native_SSSE3.h
SSEPlus/native/: SSEPlus_native_SSE.h  SSEPlus_native_SSE2.h  SSEPlus_native_SSE4a.h  SSEPlus_native_SSSE3.h
SSEPlus_Test/C_Sanity/: main.c
SSEPlus_Test/UnitTest/include/: format.h  test.h
SSEPlus_Test/UnitTest/src/: main.cpp
